[package]
name = "runscrcpy"
version = "0.1.0"
authors = ["oyun <oyun@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.6.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = 'abort'
